功能：增加赔率日期索引和批量走势接口
